# socket-burst-dampener

./: LICENSE  README.md  pyproject.toml  setup.py
src/: socket_burst_dampener.py
test/: test_socket_burst_dampener.py
