[project]
name = "socket-burst-dampener"
version = "1.3.3"
authors = [
  { name="Zac Medico", email="zmedico@gmail.com" },
]
description = "A daemon that spawns a specified command to handle each connection, and dampens connection bursts"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
socket-burst-dampener = "socket_burst_dampener:main_entry_point"

[project.urls]
"Homepage" = "https://github.com/zmedico/socket-burst-dampener"
"Bug Tracker" = "https://github.com/zmedico/socket-burst-dampener/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
